fix: general ledger report: remove scrollbars

--- a/styles/pages/accounting.scss
+++ b/styles/pages/accounting.scss
@@ -21,8 +21,6 @@ td.mod-bordered-group {
 }
 
 .journal-report {
-  overflow: scroll;
-
   .items-table {
     min-width: 560px;
   }
